--- a/templates/questions/base.html
+++ b/templates/questions/base.html
@@ -15,7 +15,10 @@
 {% block navbar %}{% endblock %}
 <div class="container">
     <div class="col-12 col-lg-12 col-md-12 col-sm-12">
-        {% block welcome %}{% endblock %}
+    <br>
+        <div class="custom_container">
+            {% block welcome %}{% endblock %}
+        </div>
     </div>
     <div class="row">
         <div class="col-12 col-lg-3 col-md-3 col-sm-12">
