--- a/AgahSurvey/static/css/base.css
+++ b/AgahSurvey/static/css/base.css
@@ -1,31 +1,34 @@
 body {
-    background-color: #F8F5F1;
-    text-align: right;
+    background-color: #FEFEFC;
+    text-align: center;
 }
 
 input, select {
     margin-top: 30px;
     margin-bottom: 30px;
 }
+text{
+    color: #DE8688;
+}
 
 .custom_container {
     margin-top: 20px;
     margin-bottom: 50px;
-    background-color: #5AA897;
+    background-color: #E8966C;
     padding: 40px;
     border-radius: 20px;
 }
 
 h4 {
-    color: #45526C;
+    color: #2D297B;
 }
 
-.btn-primary {
-    background-color: #45526C;
-}
+/*.btn-primary {
+    background-color: #f4a261;
+}*/
 
 .error {
-    color: #F8A488;
+    color: #E85832;
 }
 
 .hide {
