--- a/templates/questions/base.html
+++ b/templates/questions/base.html
@@ -8,6 +8,10 @@
             integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+          integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+
     <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
     {% block extra_head %}{% endblock %}
 </head>
@@ -15,7 +19,7 @@
 {% block navbar %}{% endblock %}
 <div class="container">
     <div class="col-12 col-lg-12 col-md-12 col-sm-12">
-    <br>
+        <br>
         <div class="custom_container">
             {% block welcome %}{% endblock %}
         </div>
