--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -20,8 +20,13 @@
         <div class="options" id="options">
         </div>
         <br>
-        <button type="button" id="previous_btn" class="hide btn btn-primary btn-lg">قبل</button>
-        <button type="button" id="next_btn" class="btn btn-primary btn-lg">بعد</button>
+        <button type="button" id="previous_btn" class="hide btn btn-primary btn-lg">
+            قبل
+            <i class="fas fa-chevron-circle-right"></i>
+        </button>
+        <button type="button" id="next_btn" class="btn btn-primary btn-lg"><i class="fas fa-chevron-circle-left"></i>
+            بعد
+        </button>
         <button type="submit" class="hide btn btn-primary btn-lg" id="submit">ارسال پاسخ و رفتن به مرحله آخر</button>
     </form>
 {% endblock %}
