--- a/templates/questions/end.html
+++ b/templates/questions/end.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>پایان نظرسجنی</title>
+    <style>
+        body{
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
 <h2>تشکر از وقتی که قرار دادین</h2>
