--- a/templates/questions/sentence.html
+++ b/templates/questions/sentence.html
@@ -17,11 +17,13 @@
         <input type="hidden" value="{{ first_question }}" name="first_question">
         <input type="hidden" value="{{ last_question }}" name="last_question">
         <div class="row">
-            <div class="col-lg-9 col-md-9 col-sm-9 col-9">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
                 {% for question in other_question %}
                     <div class="questions {% if question.pk != first_question %}hide{% endif %}"
                          id="question{{ question.pk }}">
-                        <h5>{{ question }}</h5>
+                        <h4><i class="fas fa-cloud"></i>&nbsp;
+                            {{ question }}
+                        </h4>
                         <br>
                         {% for brand in A6 %}
                             <div class="row">
@@ -38,26 +40,28 @@
                                 هیچکدام</label>
                         </div>
                         <div class="row">
-                            {% comment %}                        <input name="{{ question.pk }}" style="display: inline-block" type="text" id="flexCheckDisabled"
-                               placeholder="سایر">{% endcomment %}
                         </div>
                     </div>
                 {% endfor %}
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-1 col-md-1 col-sm-1 col-1"></div>
-            <button type="button" class="arrow btn btn-lg btn-primary col-lg-4 col-md-4 col-sm-4 col-4" id="previous">
-                قبلی
-            </button>
             <div class="col-lg-2 col-md-2 col-sm-2 col-2"></div>
-            <button type="button" class="arrow btn btn-lg btn-primary col-lg-4 col-md-4 col-sm-4 col-4" id="next">بعدی
+            <button type="button" class="arrow btn btn-lg btn-primary col-lg-2 col-md-2 col-sm-2 col-2" id="previous">
+                قبلی
+                <i class="fas fa-chevron-circle-right"></i>
             </button>
-        </div>
-        <br>
-        <div class="row">
-            <input value="تایید و اتمام نظرسنجی" id="submit" type="submit"
-                   class="text-center btn btn-success col-lg-6 col-md-6 col-sm-12 col-12 hide">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+                <button id="submit" type="submit"
+                        class="text-center btn btn-success btn-lg hide" style="width: 100%">
+                    <i class="fas fa-save"></i>
+                    تایید
+                </button>
+            </div>
+            <button type="button" class="arrow btn btn-lg btn-primary col-lg-2 col-md-2 col-sm-2 col-2" id="next"><i
+                    class="fas fa-chevron-circle-left"></i>
+                بعدی
+            </button>
         </div>
     </form>
 {% endblock %}
