--- a/templates/questions/sentence.html
+++ b/templates/questions/sentence.html
@@ -46,20 +46,19 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-lg-2 col-md-2 col-sm-2 col-2"></div>
-            <button type="button" class="arrow btn btn-lg btn-primary col-lg-2 col-md-2 col-sm-2 col-2" id="previous">
+            <div class="col-lg-1 col-md-1 col-sm-1 col-2"></div>
+            <button type="button" class="arrow btn btn-lg btn-primary col-lg-3 col-md-3 col-sm-3 col-3" id="previous">
                 قبلی
                 <i class="fas fa-chevron-circle-right"></i>
             </button>
-            <div class="col-lg-4 col-md-4 col-sm-4 col-4">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-3">
                 <button id="submit" type="submit"
                         class="text-center btn btn-success btn-lg hide" style="width: 100%">
                     <i class="fas fa-save"></i>
                     تایید
                 </button>
             </div>
-            <button type="button" class="arrow btn btn-lg btn-primary col-lg-2 col-md-2 col-sm-2 col-2" id="next"><i
-                    class="fas fa-chevron-circle-left"></i>
+            <button type="button" class="arrow btn btn-lg btn-primary col-lg-3 col-md-3 col-sm-3 col-3" id="next"><i class="fas fa-chevron-circle-left"></i>
                 بعدی
             </button>
         </div>
