--- a/templates/questions/brand.html
+++ b/templates/questions/brand.html
@@ -27,7 +27,7 @@
         <button type="button" id="next_btn" class="btn btn-primary btn-lg"><i class="fas fa-chevron-circle-left"></i>
             بعد
         </button>
-        <button type="submit" class="hide btn btn-primary btn-lg" id="submit">ارسال پاسخ و رفتن به مرحله آخر</button>
+        <input type="submit" class="hide btn btn-primary btn-lg" id="submit" value="ارسال پاسخ و رفتن به مرحله آخر">
     </form>
 {% endblock %}
 {% block js %}
